--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sails": "~0.11.0",
     "sails-auth": "^1.3.1",
     "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.11.2",
     "sails-permissions": "^1.3.3"
   },
   "scripts": {
